--- a/yahi.html
+++ b/yahi.html
@@ -398,6 +398,19 @@ id="toc-qualité-logiciel-libre">Qualité logiciel libre</a></li>
 <li><a href="#évangélisation-la-plaie-de-lintroverti"
 id="toc-évangélisation-la-plaie-de-lintroverti">Évangélisation la plaie
 de l’introverti</a></li>
+<li><a href="#la-névrose-de-coder-en-entreprise-et-du-logiciel-libre"
+id="toc-la-névrose-de-coder-en-entreprise-et-du-logiciel-libre">La
+névrose de coder en entreprise et du logiciel libre</a></li>
+<li><a href="#scratching-an-itch" id="toc-scratching-an-itch">«
+Scratching an itch »</a>
+<ul>
+<li><a href="#digression-le-codeur-au-486-et-au-pentium"
+id="toc-digression-le-codeur-au-486-et-au-pentium">Digression : le
+codeur au 486 et au pentium</a></li>
+<li><a href="#revenons-au-problème"
+id="toc-revenons-au-problème">Revenons au problème</a></li>
+<li><a href="#amish-coding" id="toc-amish-coding">Amish coding</a></li>
+</ul></li>
 </ul>
 </nav>
 <h1 id="la-vraie-vie">La vraie vie</h1>
@@ -555,5 +568,167 @@ cette partie sans comprendre les motivations personnelles, et
 l’auteur.</p>
 <p>Donc, expérience stressante, je vais comme parler de moi à la 3é
 personne.</p>
+<h1 id="la-névrose-de-coder-en-entreprise-et-du-logiciel-libre">La
+névrose de coder en entreprise et du logiciel libre</h1>
+<p><a
+href="https://raw.githubusercontent.com/jul/faire_un_livre/main/exemple/sherpa.pdf">La
+vie de codeur en entreprise n’est pas rose en tout cas, celle que j’ai
+connu.</a></p>
+<p>Dire que l’on fait de la merde est un pléonasme, l’entreprise ne
+semble pas avoir pour but de produire, mais de fournir des positions
+sociales qui reflètent plus les travers de la société.</p>
+<p>Comme certains disent, le code est politique, il reflète dans son
+organisation, son développement et même son ingénierie une vision
+sociale, sociétale dirons certains de nos communautés.</p>
+<p>J’abuse de terme que ne connais pas en parlant de névrose. Pour moi
+une névrose c’est quand la main gauche fait quelque chose que la main
+droite réprouve. Genre, t’es pour aider les miséreux mais tu tournes le
+dos au squidjie qui te demande une pièce.</p>
+<p>Je fais parti de la première génération d’«amateur» de
+l’informatique, celle qui a grandi en tapant sans comprendre les listing
+papiers en basic d’hebdogiciel (un magazine disparu sur
+l’informatique).</p>
+<p>Je vais vous gâcher la fin : taper sans comprendre sert à rien.</p>
+<p>Mes deux véritables ouvertures à la programmation ont été car à
+l’époque j’avais les moyens ma calculatrice programmable (une HP48) et
+quelques années plus tard linux (slackware).</p>
+<p>Et j’ai découvert quelque chose de merveilleux : LA
+DOCUMENTATION.</p>
+<p>En 1993 quand on installait encore linux à coup de disquette car les
+CDROMs étaient pas si courant, on pouvait acheter pour pas cher des
+ouvrages en papier bible avec tous les HOWTO linux. Et ça, ça m’a
+vraiment aidé.</p>
+<p>La qualité de documentation qui m’a permis de devenir autonome,
+auto-didacte je dirais, est ce que je préfère. De nos jours, pour cette
+raison, je préfère installer freeBSD sur mon serveur car les pages de
+manuels sont bien écrites et suffisantes.</p>
+<p>La qualité « logiciel libre » est devenu le standard que je voulais
+atteindre au moins une fois dans ma vie. Sur ce chemin, j’ai fait de
+nombreux essais et pour l’instant n’ai connu que des échecs.</p>
+<p>Vous me direz pourquoi persévérer : t’es pas doué, t’es pas doué,
+lâche l’affaire et arrête de perdre du temps et des points de santé
+mentale que tu pourrais consacrer à ta famille. Et je suis d’accord.</p>
+<p>Néanmoins, j’arrive pas à me laisser compter « KO ». J’aimerais
+toujours faire du « beau code » et « en vivre ».</p>
+<p>Suite à mon dernier taf où je me suis fait harceler (et menacer
+physiquement (quelle nouveauté)) je suis en dépression, et il paraît que
+pour sortir d’une dépression, il faut avoir « un projet ».</p>
+<p>Donc, sans mentir, je mets mes tripes dans mon code et aussi de la
+critique technique, des processus et de l’ingénierie.</p>
+<p>Comme par exemple, je peux pas saquer les scrums meetings et
+l’hypocrisie du développement agile. Coder sans est un vrai plaisir et
+violer le maximum de règle de l’agile (non je ne mettrais pas de lien
+vers cette daube dont on peut lui faire dire ce que l’on veut) est une
+volonté délibérée.</p>
+<p>Pas de user-story, pas de planning, pas de rétro-planning, de toute
+façon, quand on est seul ça fait pas de bon sens.</p>
+<p>La chose important dans « logiciel libre » n’est pas tant qu’il
+libère son utilisateur, qu’il libère celui qui code de normes
+étouffantes et inutiles. Pouvoir ne pas faire comme en entreprise et
+délivrer est une propagande par le code contre tout ce qui ne va pas en
+entreprise en ce qui me concerne.</p>
+<p>C’est un moment cathartique pour moi pour oublier tout ce qui
+m’empêche de livrer avec la qualité qui me sied. Et c’est pour ça que je
+vise le graal du paquet de distribution, pour me prouver à moi même que
+je ne suis pas fou et que ma critique politique de l’entreprise donne
+bien un résultat pertinent et valide.</p>
+<h1 id="scratching-an-itch">« Scratching an itch »</h1>
+<p>En logiciel libre, on conseille de toujours partir pour écrire un
+logiciel de partir d’un problème que l’on a et pour lequel on cherche
+une solution. De <em>gratter là ou ça démange</em> (scratch an itch en
+anglais).</p>
+<p>Bon, là, le problème a disparu il y a 12 ans quand j’ai émigré au
+Canada et où j’ai tellement avancé mon salaire à mon employeur avec
+l’aide d’un franco que je suis tombé dans la misère.</p>
+<p>Faîtes moi confiance, une fois que l’on tombe dans la misère c’est
+dur de simplement redevenir pauvre.</p>
+<p>Je distingue le pauvre <em>celui qui ne manque de rien mais ne peut
+se payer le superflu</em>, du miséreux dont le manque de caillasse fait
+que sa santé se détériore, l’empêchant d’utiliser son seul capital, son
+corps pour devenir salarié.</p>
+<p>Donc, quand j’étais pauvre je faisais de l’auto-hébergement, ce que
+je considérais être mon portfolio de sysadmin établissant ma crédibilité
+à être sysadmin.</p>
+<p>Mon serveur était un centrino pas péchu délibérément ; mon crédo a
+toujours été de faire le max que l’on peut avec le moins possible.</p>
+<h2 id="digression-le-codeur-au-486-et-au-pentium">Digression : le
+codeur au 486 et au pentium</h2>
+<p>Il était une fois, un jeune moi à la fac de Paris VI qui suivait
+après moults échecs les conseils de sa grand mère : ne cherche pas à
+être bon, fait juste le minimum pour passer. Grâce à ses conseils, mes
+notes se sont améliorées, mais il y eût dans mon histoire académique une
+exception ; le cours d’assembleur.</p>
+<p>Durant ce cours, j’avais un voisin, fils d’ingénieur, qui un jour m’a
+expliqué que je ne pouvais pas savoir coder car je ne possédais qu’un
+ordinateur d’il y a 2 générations ; un 486DX2 66Mhz avec bus VLB et lui
+un pentium PCI 90Mhz SMP. Et que quelque part, j’étais juste une
+daube.</p>
+<p>Ça m’a eût énervé.</p>
+<p>Et j’ai décidé dans cette matière d’investir un peu d’énergie. C’est
+d’ailleurs comme ça que je l’ai poutré en terminant le premier notamment
+grâce aux TPs, en prenant le même TP que lui (manipulation de bras de
+robot) et en le ridiculisant avec un code largement plus simple qui
+marchait le jour de la livraison.</p>
+<p>Je peux pas vous dire comment ça m’a fait du bien. Et depuis, je
+regarde avec circonspection les tenants du « c’est pas grave de pas
+savoir bien coder, la machine peut compenser ».</p>
+<h2 id="revenons-au-problème">Revenons au problème</h2>
+<p>À l’époque pour le fun j’ai développé une librairie <a
+href="https://jul.github.io/cv/pres.html#printable">qui donne des
+propriétés d’algèbre linéaire aux dictionnaires python</a></p>
+<p>Et en pratiquant la librairie, je m’étais rendu compte qu’elle était
+pratique pour agréger les statistiques en utilisant moins de code.</p>
+<p>J’avais aussi la pratique des <a
+href="https://docs.python.org/3/howto/regex.html#non-capturing-and-named-groups">regexps
+nommées</a> qui transforme le résultat d’une regexp en dictionnaire.</p>
+<p>M’est alors venu l’idée simple il y a 12 ans de faire une librairie
+de regexp de journaux de serveurs, pour en agréger les statistiques et
+j’ai jeté sur un coin de table un serveur flask pour servir les vues par
+pays sur une carte, les histogrammes et les séries temporelles.</p>
+<p>Et j’étais fier que ça tournait sur mon intel celeron sans mémoire
+cache.</p>
+<p>Puis récemment, mon ami tuck m’a dit, j’aimerais faire du logiciel
+libre, t’as pas un projet sympa qu’on pourrait livrer ?</p>
+<p>Vu que je suis psychotique d’après 3 de mes anciens patrons, j’ai
+peut être entendu des voix, mais peu importe : un truc me chagrinait sur
+ce projet : LE SERVEUR FLASK.</p>
+<p>Donc, je m’ai dit livre un agrégateur de statistique de serveurs
+(serveur que je n’ai plus, trololol, ça aide pas à développer) en …
+<em>défi</em> … roulement de tambour … en une page HTML qui contienne
+tout.</p>
+<h2 id="amish-coding">Amish coding</h2>
+<p>Si une chose me casse les bonbons en code moderne, c’est les
+dépendances inutiles.</p>
+<p>En tant que sysadmin d’entreprise j’en ai déployé des solutions
+énergivores et complexe basées sur de multiples couches (grafana, qui
+terminent dans le cloud pour faire des stats webs par agrégations.</p>
+<p>Yahi est littéralement ma réponse personnelle à ce délire de couches
+complexes qui s’empile pour au final un rendu qui ne sert que la vanité.
+Un truc qui transforme les journaux web de base en une série de
+visualisation « good enough »© en UNE seule page web hébergeable sans
+avoir besoin d’invoquer <em>npm</em>, <em>react</em>, <em>vue</em>,
+<em>grafana</em> et tutti quanti.</p>
+<p>J’avais envie de revenir à un truc de base, simple en tentant en plus
+en tant que développeur de ce que l’on appelle le « back » (la partie
+arrière d’un site web qui concerne l’authentification, l’autorisation,
+le rendu des bases de données, les interactions serveurs) de faire un
+coup de pied de la mule aux développeurs « front » (la partie visible
+qui attire le regard) en faisant le plus possible de code moi même sans
+cadriciels.</p>
+<p>En conclusion, l’idée en faisant ce code n’était pas tant de délivrer
+un résultat que d’interroger les pratiques modernes de code en
+entreprise qui veulent que tout devienne chancre de dépendances,
+énergivores. Parce qu’il faut pas se leurrer, un framework, une infra
+cloud en plus, c’est du CO2 inutile qui est inutilement généré, et
+quelque part, vu que c’est inutile : ça m’énerve. Donc, j’ai mis
+beaucoup d’effort à tenté de faire le moins de code possible.</p>
+<p>Ce code ne parle pas de statistiques de serveur de page web, mais de
+la frustration intrinsèque à faire des usines à gaz qui sont tout le
+contraire de pour moi ce que devrait être la programmation : être le
+moins dispendieux en ressources (librairies, CPU, mémoire) pour être le
+plus accessible à tous possible.</p>
+<p>C’est un cri du cœur face à ma névrose d’entreprise, je fais le
+contraire de ce que l’on nous incite à faire pour me libérer de cette
+croyance que je trouve aliénante et débile.</p>
 </body>
 </html>
