--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
     
    <div id="CVinter" class="step  " 
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
-       <h1 class=big >Objectif</h1>
-       <i>
-            Jack of all trades, master of none, but oftentimes better than a master of one. <br/>
-           
-        </i>
-
+       Avoir été, être et rester de ceux qui construisent l'avenir !
    </div>
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
@@ -49,7 +44,7 @@
    <div  class="content step"   data-scale=1.6 data-x="2000" data-y="3000"  >
        <h1 class=intitule><b>2022</b> Développeur senior Yooz</h1>
        <p>
-       Developpeur python en environnement de signature électronique et dématérialisation des factures.
+       Developpeur python en environnement de signature électronique et dématérialisation des factures dans le département IA.
 
        </p>
         <table>
@@ -58,7 +53,7 @@
                 Technologies
               </td>
               <td class=is >
-                    python, linux, docker, pytorch, C#, kubernetes
+                    python, linux, docker, pytorch, C#, kubernetes, pythonnet
               </td>
            </tr>
            <tr >
@@ -81,7 +76,29 @@
    <div  class="content step"   data-scale=1.6 data-x="1000" data-y="3000"  >
        <h1 class=intitule><b>2018</b> Développeur senior logilab (Toulouse)</h1>
        <p>
-       Sysadmin linux/Développeur python. Environnement intéressant par sa diversité, et prompt à déclencher une fatigue à courir dans tout les sens.
+       Sysadmin linux/Développeur python. 
+<ul>
+<li>Chantier d'intégration LDAP oauth (openldap, keycloack)
+</li><li>
+Chantier d'intégration LDAP DNS/DHCP (unbound, openLDAP)
+</li><li>
+Chantier Backup (borg/rsync)
+</li><li>
+MCO kubernetes, openstack, jenkins, rancher
+</li><li>
+Mise en place de déploiement continu (gitlab CI, jenkins, docker registry)
+</li><li>
+Déploiement et gestion des certificats SSL (lemur, let's encrypt)
+</li><li>
+Développement cubic Web
+</li><li>
+Tâche de gestion des infrastructure (Salt)
+</li><li>
+Devops (élaboration et déploiement de solution docker)
+</li><li>
+QA (test et documentation, pytests)
+</li></ul>
+
 
        </p>
         <table>
