--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </ul>
     </div>
     
-   <div id="CVinter" class="step  " 
+   <div id="CVinter" class="step content" 
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
-       Avoir été, être et rester de ceux qui construisent l'avenir !
+    <br/>
+       <center>Avoir été, être et rester de ceux qui construisent l'avenir.</center>
    </div>
    <div class="step content " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
@@ -44,7 +45,7 @@
    <div  class="content step"   data-scale=1.6 data-x="2000" data-y="3000"  >
        <h1 class=intitule><b>2022</b> Développeur senior Yooz</h1>
        <p>
-       Developpeur python en environnement de signature électronique et dématérialisation des factures dans le département IA.
+       Developpeur python en environnement de signature électronique et dématérialisation des factures triées par IA.
 
        </p>
         <table>
@@ -512,7 +513,8 @@ QA (test et documentation, pytests)
     HTML, C et javascript<br/><br/>
     <a
         href="http://pypi.python.org/pypi?%3Aaction=search&term=julien+tayon&submit=search">Paquets
-        sur pypi</a> installables avec <i>pip</i>
+        sur pypi</a> installables avec <i>pip</i><br/><br/>
+        <a href=https://archive.fosdem.org/2017/schedule/event/python_duck_typing/> Présentation FOSDEM 2017 de archery</a>
     
     </div>
  
@@ -531,13 +533,22 @@ QA (test et documentation, pytests)
       <a href=http://beauty-of-imagination.blogspot.fr/2012/06/color-of-music-why-not-discover-pythons.html >Spectrosonogramme avec matplotlib</a><br/>
       <img  src=img/sono.png  />
     </div>
+    <div class="content step" data-scalre=2 data-x=4500 data-y=-3000 data-rotate=-25>
+    Mes 3 livres libres sont ici : 
+    <ul>
+    <li><a href=https://raw.githubusercontent.com/jul/faire_un_livre/main/exemple/sherpa.pdf>Sherpa du web : la soute à charbon</a></li>
+    <li><a href=https://jul.github.io/cv/yahi.html>Loser du libre</a></li>
+    <li><a href=https://jul.github.io/cv/haf.book.html>Homme au foyer: au centre de l'ennui</a> </li>
+    </ul>
+    </div>
    <div class="step " data-scale=2 data-x="5500" data-y="1000" 
   data-rotate=0 >
-      <a href=http://wwwstat.julbox.fr >Stat de téléchargement sur pypi</a><br/>
-      <br/>
-      utilise <a href=https://github.com/jul/yahi>archery</a> et flask<br/>
 
-      <img src=img/stat.png width=900px />
+       <iframe width=1000 height=600 src=https://jul.github.io/cv/demo.html?route=chrono#hour_hit ></iframe>
+      <a href=https://pypi.org/project/yahi/ >Yahi : un parser de log versatile</a><br/>
+      <br/>
+      utilise <a href=https://github.com/jul/yahi>archery</a><br/>
+
     </div>
    <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
   data-rotate=180 >
