--- a/tp.book.html
+++ b/tp.book.html
@@ -420,7 +420,13 @@ de travail</a></li>
 <li><a href="#la-nouvelle-saloperie-le-cdd-déguisé-en-cdi"
 id="toc-la-nouvelle-saloperie-le-cdd-déguisé-en-cdi">La nouvelle
 saloperie : le CDD déguisé en CDI</a></li>
+<li><a href="#la-déqualification-des-métiers-intellectuels"
+id="toc-la-déqualification-des-métiers-intellectuels">La déqualification
+des métiers intellectuels</a></li>
 </ul></li>
+<li><a href="#improviser-sadapter-surmonter"
+id="toc-improviser-sadapter-surmonter">Improviser, s’adapter,
+surmonter</a></li>
 </ul>
 </nav>
 <h1 id="pourquoi-pas">Pourquoi pas ?</h1>
@@ -922,6 +928,43 @@ adhérents est inférieur à des sports de vrais brutes comme le foot. Bon,
 j’en viens à la conclusion que si on prend la contraposée : « c’est se
 faire du bien » on arrive à un truc plus proche de la réalité
 (CQFD).</p>
+<h2 id="la-déqualification-des-métiers-intellectuels">La déqualification
+des métiers intellectuels</h2>
+<p>Être qualifié, c’est être autonome sur le choix de ses tâches, et
+comment les accomplir -<em>toujours en étant autonome</em>- dans le
+contexte d’un chantier.</p>
+<h1 id="improviser-sadapter-surmonter">Improviser, s’adapter,
+surmonter</h1>
+<p>Oubliez le bullshit que j’ai dit sur une recherche saine dans une
+routine saine.</p>
+<p>La vraie vie en a rien à foutre de vos intentions.</p>
+<p>Ce matin, je devais emmener ma fille à l’hosto se faire retirer son
+plâtre, mais paf, cette nuit elle a eu une gastro, ma femme a besoin
+d’être aidée car sa main est cassée, et je suis la seule personne 70%
+fonctionnelle de la famille. Et quelque part, c’est un peu mon quotidien
+d’avoir des imprévus.</p>
+<p>Avec ma fille à la maison, je n’ai pas d’autres choix par exemple que
+vu qu’elle est dans un état larvaire la laisser larver sur mon
+ordinateur avec tous mes identifiants pour la recherche d’emploi, et
+avec ma femme qui est dans sa phase rageuse garou, adieu la tranquillité
+nécessaire à l’exercice.</p>
+<dl>
+<dt>Je suis pas autiste, mais j’aime pas quand mes routines sont
+perturbées</dt>
+<dd>
+ça me perturbe.
+</dd>
+</dl>
+<p>Et c’est là où je réalise que je ne suis pas à égalité avec ceux qui
+comme un tiers des parents de l’école élémentaire que fréquente ma fille
+ont des nounous. Je me rends compte aussi qu’être trop pauvre pour avoir
+une voiture me coupe de pas mal d’offres vu que les employeurs
+considèrent acquis comme discrimination à l’embauche qu’on a les moyens
+d’avoir une voiture pour atteindre leurs sièges sociaux loin des
+transports en commun, et je comprends mieux les questions récurrentes
+sur le fait d’avoir une voiture. Non, je n’ai pas de voitures, car en
+bon père de famille je gère le budget raisonnablement pour éviter les
+crédits et coûts récurrents ; donc je n’aurais pas de voiture.</p>
 <aside id="footnotes" class="footnotes footnotes-end-of-document"
 role="doc-endnotes">
 <hr />
