la faute à l'agile

--- a/tp.book.html
+++ b/tp.book.html
@@ -933,6 +933,85 @@ des métiers intellectuels</h2>
 <p>Être qualifié, c’est être autonome sur le choix de ses tâches, et
 comment les accomplir -<em>toujours en étant autonome</em>- dans le
 contexte d’un chantier.</p>
+<p>Je me souviens de mes débuts en informatique : on était autonome sur
+notre chantier.</p>
+<p>Genre chez easter eggs, un client voulait que ces murs d’écrans
+soient supportés sous linux.</p>
+<p>Le directeur technique est venu me voir avec les spécifications
+techniques de l’architecture client et et son expression de besoin, m’a
+demandé comment le le sentais et m’a filé son travail préparatoire
+document d’architecture. J’ai fait mes recherches sur les technos
+envisagées, je suis venu avec des amendements à son architecture (j’ai
+pris une autre direction car la sienne était non maintenue dans le
+noyau) et il m’a fait confiance et laissé libre de choisir la voie et de
+coder la solution.</p>
+<p>J’ai développé un driver linux pour une carte graphique, les outils
+pour aller avec le produit, patché un serveur X et étant short sur mes
+délais pour cause qu’une tâche de R et D<a href="#fn6"
+class="footnote-ref" id="fnref6" role="doc-noteref"><sup>6</sup></a> est
+pas nature incertaine je suis allé le voir pour qu’il me file une
+ressource. Chose sur laquelle il m’a fait confiance, et on a livré … 15
+minutes avant la démonstration produit.</p>
+<p>Ok, j’ai pas été bon, mais c’était un de mes premiers jobs. Si
+j’avais été meilleur j’aurais mieux « estimer la charge », mais ça,
+croyez moi, ça vient avec l’expérience.</p>
+<p>Aujourd’hui, ce genre de responsabilité sur un chantier ne serait
+plus possible.</p>
+<p>Déjà, on ne m’aurait pas laissé autant capable de me déconnecté du
+client, rester <em>SEUL</em> et j’aurais eu la myriade de ticket en mode
+« où en est on, où en est on ? ». Les interruptions sont un vrai tueur
+de concentration, et certaine tâche exigent d’être immergé dans des tas
+de données abscons.</p>
+<p>Ensuite, j’aurais pas eu la latitude de décider de faire les 3/4 du
+développement solo : trop risqué mon ami, que se passe t’il si tu as un
+accident ? Actuellement je développais avec Valéry, et on se causait pas
+mal.</p>
+<p>Aussi, j’avais pas lieu de remplir d’imputation budget, car j’étais
+non stop sur un problème d’un client, ce qui me permettait d’acquérir la
+profondeur de vue nécessaire et l’expertise technique nécessaire à la
+tâche. Et ça me permettait de pouvoir répondre confortablement aux mails
+clients quand il y en avait.</p>
+<p>Je n’avais pas de revue de code. Ça m’arrivait d’appeler Valery à la
+rescousse car j’étais paumé et l’on faisait du peer progamming sans le
+savoir avant que ce soit à la mode ; car c’est être autonome de savoir
+quand et qui appeler à l’aide quand on en a besoin.</p>
+<p>À cette époque, le développeur se voyait confier des chantiers où il
+était autonome, et les clients qui me voyaient faire du vélo étaient
+toujours effrayé vu ma conduite que leur projet cane avec moi. C’était
+rigolo.</p>
+<p>Jusqu’en 2007 à peu près (soit pendant ~10 ans de ma carrière
+officielle puisqu’on ne comptera pas les jobs au black et les trucs fait
+en loucedé pour aider les potes) c’était la norme.</p>
+<p>Puis sont apparus les systèmes de tickets.</p>
+<p>Outils que j’ai eu mis en place chez des telcos ou installés comme
+request tracker parce que j’étais orienté sysadmin. Mais c’était aussi
+les débuts de la généralisation d’outils comme redmine (que j’ai autant
+installés et configurés qu’utiliser, github … tout ce qu’on commençait
+appelait des forges.</p>
+<p>Et request tracker, c’est un outil que j’aimais bien, en tant que
+sysadmin il était vraiment pratique pour suivre les interventions, les
+incidents à partir d’entrées mails.</p>
+<p>Ne vous méprenez pas, j’ai installé et utilisé ces outils parce
+qu’ils étaient utiles, je ne critique pas leur existence, bien au
+contraire. <a href="https://www.redmine.org/">Redmine</a><a href="#fn7"
+class="footnote-ref" id="fnref7" role="doc-noteref"><sup>7</sup></a>
+était un de mes outils préférés en tant que codeur qui permettait de
+formaliser la découpe de projets en tickets, qui affichait les
+diagrammes de Pert et de Gantt. Ce qui vous vous en doutez implique que
+l’on pouvait saisir le temps passé par ticket et générer automatiquement
+les imputations.</p>
+<p>Je suis toujours fan de redmine car il est vraiment bien fait, léger
+et aisé à personnaliser selon ses besoins.</p>
+<p>Tant que ces outils était portés par les codeurs je les aimais
+bien.</p>
+<p>Puis, ces outils de tickets ont échappé des mains des codeurs car
+certains ont vu que c’était bon. Et les longs mails structurés ont été
+remplacés par des myriades de tickets pour le codeur.</p>
+<p>Le travail a été dépioté et l’ouverture, la fermeture de ticket
+changées de main et d’un seul coup pour terminer la déstructuration
+gastronomique du métier est arrivé le manifeste agile avec l’argument
+massu : tout ce qui fait que les métiers de l’informatique sont
+qualifiés et autonome <strong>c’est de la merde</strong>.</p>
 <h1 id="improviser-sadapter-surmonter">Improviser, s’adapter,
 surmonter</h1>
 <p>Oubliez le bullshit que j’ai dit sur une recherche saine dans une
@@ -980,6 +1059,12 @@ patrons<a href="#fnref4" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
 <li id="fn5"><p>handover en français de Paris<a href="#fnref5"
 class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn6"><p>Recherche et Développement<a href="#fnref6"
+class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn7"><p>contrairement à mon emploi du temps passé le projet
+existe encore et vit toujours, hein ?! Mais c’est plus la « hype » que
+c’était.<a href="#fnref7" class="footnote-back"
+role="doc-backlink">↩︎</a></p></li>
 </ol>
 </aside>
 </body>
