--- a/tp.book.html
+++ b/tp.book.html
@@ -1012,6 +1012,49 @@ changées de main et d’un seul coup pour terminer la déstructuration
 gastronomique du métier est arrivé le manifeste agile avec l’argument
 massu : tout ce qui fait que les métiers de l’informatique sont
 qualifiés et autonome <strong>c’est de la merde</strong>.</p>
+<p>D’abord revenons à qui a écrit le manifeste agile en regardant
+l’histoire du manifeste : des rocks tars, des 10 x engineers, des
+consultants, catalystes, <em>experts</em>, conteurs pendant leurs
+vacances de luxe, pas des codeurs dans un piquet de grève en face de
+leurs bureaux.</p>
+<p>Dans quel contexte ?</p>
+<p>Celui de la montée des VCs <a href="#fn8" class="footnote-ref"
+id="fnref8" role="doc-noteref"><sup>8</sup></a> comme YCombinator,
+l’éditeur derrière HackerNews, un site qui censure tout commentaires et
+nouvelles sur tout ce qui peut être social comme étant dangereusement
+politique. Évidemment, Elon Musk y est adulé, comme l’Agile. J’imagine
+qu’il ne faut pas faire d’argument par association.</p>
+<p>Le Manifeste Agile stipule une chose : casser tout ce qui fait le
+métier selon ses mots ; toujours opposer :</p>
+<ul>
+<li>Les individus et leurs interactions, de préférence aux processus et
+aux outils,</li>
+<li>Des solutions opérationnelles, de préférence à une documentation
+exhaustive,</li>
+<li>La collaboration avec les clients, de préférence aux négociations
+contractuelles,</li>
+<li>La réponse au changement, de préférence au respect d’un plan.</li>
+</ul>
+<p>Au passage à l’air agile, les outils sont imposés, ils ne sont plus
+développés selon leurs besoins par les codeurs. Ce sont les entreprises
+qui ont la maîtrise des outils.</p>
+<p>Les interactions sont celles de la bromance et de la meute de
+préférence à une approche arbitrée par processus quasi déterministes. Ce
+sont les interactions des rituels SCRUMs de savoir être qui remplacent
+des arbitrages basés sur l’argumentation selon des logiques claires …
+par exemple de coût.</p>
+<p>La protection contractuelle et par processus des salariés est
+bazardée pour laisser le client faire ce qu’il veut comme il veut (le
+client roi). Il suffit de voir l’hostellerie restauration pour voir que
+ceci résulte dans des relations toxiques entre clients et « serviteurs
+»</p>
+<p>La conduite opérationnelle du changement (mon domaine d’étude au
+CNAM) est mise en contrepied de la planification (hum, y’a une couille
+dans le potage), c’est l’arbitraire du « YOLO il faut changer sans
+raisons » de préférence à la discussion.</p>
+<p>La documentation (qui inclut les spécs techniques et fonctionnelles)
+est jetée à la poubelle. Et je vais y revenir ces documentations étaient
+essentielles.</p>
 <h1 id="improviser-sadapter-surmonter">Improviser, s’adapter,
 surmonter</h1>
 <p>Oubliez le bullshit que j’ai dit sur une recherche saine dans une
@@ -1064,6 +1107,9 @@ class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn7"><p>contrairement à mon emploi du temps passé le projet
 existe encore et vit toujours, hein ?! Mais c’est plus la « hype » que
 c’était.<a href="#fnref7" class="footnote-back"
+role="doc-backlink">↩︎</a></p></li>
+<li id="fn8"><p>Vautour Capitaliste parfois appelé investisseurs capital
+risque<a href="#fnref8" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
 </ol>
 </aside>
