--- a/index.html
+++ b/index.html
@@ -598,6 +598,12 @@ QA (test et documentation, pytests)
 
 
    </div>
+   <div class="content step" data-x="-3000" data-y="1000" data-rotate=180 >
+    <center><h1>Divers</h1></center>
+    <ul><li>RQTH</li>
+    <li>brevet de secouriste du travail (à renouveler)</li>
+    </ul>
+   </div>
 
 </div>
 <div id=printable >
