better pypi link

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ QA (test et documentation, pytests)
     <a  href=http://github.com/jul>Github.com/jul</a> : projets en python,
     HTML, C et javascript<br/><br/>
     <a
-        href="http://pypi.python.org/pypi?%3Aaction=search&term=julien+tayon&submit=search">Paquets
+        href="https://pypi.org/user/julien.tayon/">Paquets
         sur pypi</a> installables avec <i>pip</i><br/><br/>
         <a href=https://archive.fosdem.org/2017/schedule/event/python_duck_typing/> Présentation FOSDEM 2017 de archery</a>
     
