--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@ QA (test et documentation, pytests)
     <center><h1>Divers</h1></center>
     <ul>
     <li>brevet de secouriste du travail (à renouveler)</li>
+    <li>RQTH</li>
     </ul>
    </div>
 
