--- a/sherpa.html
+++ b/sherpa.html
@@ -627,6 +627,19 @@ sexe)</a></li>
 id="toc-vice-coding-avec-et-sans-drogues">Vice coding avec et sans
 drogues</a></li>
 </ul></li>
+<li><a href="#quest-ce-que-le-vibe-coding-"
+id="toc-quest-ce-que-le-vibe-coding-">Qu'est ce que le vibe coding ?</a>
+<ul>
+<li><a href="#le-vibe-coding-est-il-utile-"
+id="toc-le-vibe-coding-est-il-utile-">Le vibe coding est-il utile
+?</a></li>
+<li><a href="#fausse-repentance-du-vide-coding-"
+id="toc-fausse-repentance-du-vide-coding-">Fausse repentance du vide
+coding ?</a></li>
+<li><a href="#le-libre-au-delà-du-logiciel"
+id="toc-le-libre-au-delà-du-logiciel">Le libre au delà du
+logiciel</a></li>
+</ul></li>
 <li><a href="#liste-des-liens" id="toc-liste-des-liens">Liste des
 liens</a></li>
 </ul>
@@ -2976,6 +2989,104 @@ l'IA, j'enjoins mes frères et mes sœurs à faire attention aux phénomènes
 addictions et leurs effets qu'ils entraînent.</p>
 <p>Autant les pertes de repères pour les drogues sont documentées,
 autant celles pour l'IA ne le sont pas.</p>
+<h1 id="quest-ce-que-le-vibe-coding-">Qu'est ce que le vibe coding
+?</h1>
+<p>Finalement, il faut bien définir <em>vibe coding</em>. Et, je vais
+m'essayer à une définition simple :</p>
+<blockquote>
+<p>On vibe code quand on est pas dans l'écriture de code chiante sans
+vibration propre à l'écriture de code de prod. Celui qu'on pose sur
+github.</p>
+</blockquote>
+<p>Alors évidemment, j'ai posé sur gihtub du <a
+href="http://github.com/jul/SCAM">code vibe-codé</a>, ce qui affaiblit
+mon propos. Mais, j'ai aussi posé du code que j'appellerais sans
+vibrations comme <a href="https://github.com/jul/yahi">yahi</a> ou <a
+href="https://github.com/jul/archery">archery</a> qui ont en commun
+d'être PEP8, d'avoir un commit par modif, un changelog, s'appuyant sur
+le manuel python (du fait des faibles dépendances).</p>
+<p>Un code sans <em>« vibe »</em>, c'est ce que dans le métier on
+appellerais du code propre fait dans des conditions propres en partant
+d'un ticket qui rappelle le besoin fonctionnel.</p>
+<h2 id="le-vibe-coding-est-il-utile-">Le vibe coding est-il utile ?</h2>
+<p>Ma production de code est séparé en deux en ce que je juge digne de
+github (ou n'importe quel autre gestionnaire de version) et ce qui tient
+en un simple fichier (un gist).</p>
+<p>Je qualifierais ma production de gist de <em>« vibe coding »</em>. Du
+code fait sous influences parfois de produits stupéfiants, parfois pas
+qui subit dans son processus une influence disruptive que ce soit dans
+le comment (pas de PEP8, pas de ticket, ...) la manière, ou l'esprit
+(suivre une IA, un post de blog, une idée à la con).</p>
+<p>Perso ce code m'est utile comme fondation pour mes projets. Assez
+souvent, je pars d'un gist vibe codé avant de le jeter (ou pas) pour en
+faire la base d'un code propre.</p>
+<p>Il est la Preuve de Concept, le prototype avec lequel j'aime bien
+démarrer du code ennuyeux.</p>
+<p>Il permet assez souvent soit de tester les limites d'une idée
+rapidement, soit au contraire, de valider sa pertinence en élaguant à
+l'extrême le besoin de rigueur propre à <em>tout faire from
+scratch</em>.</p>
+<h2 id="fausse-repentance-du-vide-coding-">Fausse repentance du vide
+coding ?</h2>
+<p>Suis je en train d'admettre que je suis pétri de contradictions ?
+Oui, mais aussi que mon rejet de ce qu'on appelle <em>vibe coding</em>
+le codage assisté par IA n'est en soit ni disruptif, ni souhaitable.</p>
+<p>Le vibe coding que je pratique inclus l'IA, mais je n'en suis pas
+satisfait.</p>
+<p>La qualité du code produit en regard de ce qui importe le plus pour
+moi qui est : un résultat qui passe le feu de la validation d'une idée
+ne marche pas.</p>
+<p>L'IA est par trop approximative et son code blindé de malfaçon qui le
+rende inutilisable sans une plongée dans le code pondu qui est
+hyper-verbeux qui est plus une perte de temps et de maintenabilité
+inacceptable que ses alternatives.</p>
+<p>Au moins quand je code bourré ou sous influence du shit, mon code
+déviant reste focalisé à sa manière biscornue sur l'objectif, et c'est
+là où l'art du vibe coding brille en sachant passer les barrières de
+l'altération de conscience pour rester en synchronicité avec l'idée de
+départ.</p>
+<p>Contrairement à une croyance populaire, faire n'importe quoi qui
+marche demande de la discipline intellectuelle.</p>
+<h2 id="le-libre-au-delà-du-logiciel">Le libre au delà du logiciel</h2>
+<p>Quand je fume du shit, mes circuits de dopamines se remettent
+d'équerre, et au lieu d'avoir mon état d'esprit de codeur marqué par des
+tsunamis de burnout déprimant, je retrouve de la gaieté, de la joie et
+de l'optimisme.</p>
+<p>La <em>vibe</em> qui me plaît le plus quand je code, c'est retrouver
+le plaisir d'un enfant à jouer.</p>
+<p>Dans un univers professionnel qui me remise de part mon âge au cliché
+du vieux qui n'est plus à jour, je peux évoluer, me maintenir à jour,
+tester me sentir vivre.</p>
+<p>Mon <em>vibe coding</em> se différencie de celui par IA, qu'il
+s'intéresse au code comme vibration dans nos vies. Certes, être enfermé
+en tant que personne dans un Beruf (vocation) a le goût et l'odeur de
+l'aliénation productiviste qui fait oublier femme et enfants, mais il
+est aussi ce qui fait que l'on peut ne pas se définir par sa norme
+sociale de codeur périmé par l'obsolescence supposée liée à l'âge.</p>
+<p>Mon <em>vibe coding</em> c'est celui qui mêle mon récit personnel à
+celui de mon code, liant mon hobby d'écrivain libre auto-décrété avec
+celui de codeur. C'est pour ça que j'ai mis dans le <a
+href="https://raw.githubusercontent.com/jul/scam/refs/heads/main/assets/aide.book.pdf">manuel
+de SCAM</a>, le récit sa genèse sous opium et douleur. Pour casser le
+mur entre l'outil libre et la subjectivité de l'auteur. Pour remettre
+l'humain dans le récit informatique.</p>
+<p>Les hommes et femmes qui font les logiciels sont aussi importants que
+le logiciel fait, et pour qu'il soit libre, je trouve important qu'il
+libère aussi l'homme et la femme qui en ont de l'impératif utilitariste
+ou maniériste.</p>
+<p>Nous devons en plus de veiller à ne pas faire de bugs, à entretenir
+notre joie de coder sans attente d'un quelconque bénéfice, et cela ne
+peut se faire en se soumettant exclusivement à une éthique de « la bonne
+manière de faire ».</p>
+<p>Enfermer dans <em>la bonne manière de faire</em>, notre code est
+certes maintenable, facile à modifier, à étudier, étendre, corriger,
+mais il ne faut pas que ce soit au détriment de notre plaisir.</p>
+<p>Il est important dans un monde normatif socialement et techniquement
+de savoir dé-normaliser par morceau notre manière de coder en
+choisissant les influences bonnes ou mauvaises (comme l'IA) qui nous
+permettent d'atteindre la joie.</p>
+<p>Et l'IA ne m'a pas donné de joie dans mon code, que des mots de crâne
+à réviser les bases de l'acoustique.</p>
 <h1 id="liste-des-liens">Liste des liens</h1>
 <dl>
 <dt>https://www.syntec.fr/convention-collective/</dt>
@@ -3017,6 +3128,22 @@ celui-ci
 <dt>https://github.com/jul/trollometre/</dt>
 <dd>
 trollomètre
+</dd>
+<dt>http://github.com/jul/SCAM</dt>
+<dd>
+code vibe-codé
+</dd>
+<dt>https://github.com/jul/yahi</dt>
+<dd>
+yahi
+</dd>
+<dt>https://github.com/jul/archery</dt>
+<dd>
+archery
+</dd>
+<dt>https://raw.githubusercontent.com/jul/scam/refs/heads/main/assets/aide.book.pdf</dt>
+<dd>
+manuel de SCAM
 </dd>
 <dt>https://actu.fr/ile-de-france/pontoise_95500/pontoise-la-statue-contestee-du-general-leclerc-c-est-toute-une-histoire_57570214.html</dt>
 <dd>
