--- a/sherpa.html
+++ b/sherpa.html
@@ -3228,7 +3228,20 @@ ailleurs que sur mes githubs les livres sans qu'il y ait de maison
 d'édition pour en faire la promotion ou de site communautaire avec des
 forums.</p>
 <p>J'ai fini par m'installer sur les dépêches de linuxfr pour promouvoir
-les livres à mon plus grand bonheur.</p>
+les livres et mes logiciels à mon plus grand bonheur.</p>
+<p>Et parler avec ne serait-ce que deux humains de ces projets, ça
+change de la communauté sociale de tous les jours qui nous défini par un
+statut social de chômeur mal rasé handicapé par une douzaine de burnout
+mal digérés dont les autres parents prestigieux refuse d'inviter ma
+fille à leur anniversaire pour pas que la pauvreté les contaminent.</p>
+<p>D'un seul coup, je suis pour ce que je crée et non ce que je
+reflète.</p>
+<p>Mêmes limitées (je ne suis pas le khador de la tribune linuxfr) ce
+peu d'interactions me fait du bien.</p>
+<p>Ma conclusion sur le <em>vibe coding</em> est sans appel : <em>il n'y
+a pas de vibe (coding|writing) par IA qui tienne, la seule vibe qui
+compte c'est de sentir dans une communauté et l'IA n'est pas un
+humain.</em></p>
 <h1 id="liste-des-liens">Liste des liens</h1>
 <dl>
 <dt>https://www.syntec.fr/convention-collective/</dt>
