--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Professionnel IT avec plus de 15 ans d’expérience en développement logiciel 
 <b2>Compétences</b2><br/>
 <h3>Virtualisation &amp; conteneurs :</h3> Docker, Kubernetes, KVM, OpenStack	
 <h3>Langages :</h3> Python, Bash, javascript, HTML, CSS, C#, C, VHDL ...
-<h3>Développement :</h3> FastAPI, Django, openEDX, pylons, flask ...
+<h3>Développement :</h3> FastAPI, Django, openEDX, pylons, flask, numpy, matplotlib, pandas ...
 <h3>Automatisation :</h3> CI/CD, git, jenkins, gitlab ...
 <h3>Réseaux &amp; sécurité :</h3> DHCP, LDAP, DNS, VPN, PKI, sauvegardes, droits d’accès, VoIP, UPD, MQTT ...
 <h3>Outils de mesure :</h3> Centreon, Zabbix, Munin, Checkmk, grafana ...
